--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -64,3 +64,114 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+/* Tags! */
+
+body {
+	margin-left: 10%;
+	margin-right: 10%;
+
+}
+
+nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+
+
+header {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	margin-top: 5%;
+	margin-bottom: 5%;
+
+}
+
+section {
+	display: flex;
+	justify-content: space-between;
+}
+
+footer {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 5%;
+	margin-bottom: 5%;
+}
+
+p {
+	font-size: 1.2rem;
+}
+
+h1 {
+	font-size: 6rem;
+	margin-top: 0.5%;
+	margin-bottom: 0.5%;
+}
+
+h3 {
+	font-size: 1.5rem;
+}
+
+hr {
+	border-top: 1.5px solid black;
+	margin-top: 5%;
+	margin-bottom: 5%;
+}
+
+/* Classes! */
+
+.Tagline {
+	text-align: center;
+}
+
+.StartButton {
+	background: white;
+	border: solid black 1.5px;
+	color: black;
+	height: 50%;
+	width: 55%;
+	padding-top: 1%;
+	padding-bottom: 1%;;
+	margin-top: 2%;
+	font-family: 'Titillium Web', sans-serif;
+	font-size: 1rem;
+}
+
+.Inline {
+	height:30%;
+	width: 45%;
+}
+
+.SpaceMe {
+	margin-top: 1.5%;
+	margin-bottom: 1.5%;
+}
+
+/* ID's! */
+#CircleImg {
+	width: 35%
+}
+#middle-img {
+	margin-top: 5%;
+	margin-bottom: 5%;
+	width: 100%;
+}
+
+/* Tags + Tags */
+nav a {
+	text-align: center;
+	color: gray;
+	text-decoration: none;
+}
+
+/* Tags + Classes */
+
+/* Classes + Classes */
+.Inline.Thirds {
+	width: 28%;
+}
