--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -121,6 +121,10 @@ h1 {
 	margin-bottom: 0.5%;
 }
 
+h2 {
+    font-size: 2.5rem;
+}
+
 h3 {
 	font-size: 1.5rem;
 }
@@ -141,8 +145,41 @@ hr {
 }
 
 .Table {
+    flex-wrap: wrap;
+    
+}
+
+.TableBox {
+    width: 46%;
+    height: 20rem;
+    background: #f2f2f2;
+    border: solid black 1px;
+    box-sizing: border-box;
+    padding: 3%;
+    margin: 2.5%;
+    margin-left: 0%;
+    line-height: 135%;
+    font-size: 1.1rem;
+}
+
+.TopLine {
+    border-top: 1px solid black;
+    margin-bottom: 5%;
+    margin-top: 5%;
+}
+
+.LearnMore {
+    border: 1px solid black;
+    border-radius: 5px;
+    background: white;
+    height: 18%;
+    width: 35%;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 1rem;
+    margin-top: 5%;
 
 }
+
 /* IDs */
 
 /* Tags + Tags */
@@ -152,5 +189,10 @@ nav a {
 	text-decoration: none;
 }
 /* Tags + Classes/IDs */
-
+.TableBox h3 {
+    margin-bottom: 5%;
+}
 /* Classes/IDs +  Classes/IDs */
+.TableBox.TableTop {
+    margin-top: 0%;
+}
