--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -104,6 +104,7 @@ footer {
 
 ul {
     list-style: square inside;
+    margin-top: 5%;
 }
 
 li {
@@ -112,7 +113,8 @@ li {
 }
 
 p {
-	font-size: 1.2rem;
+    font-size: 1.2rem;
+    line-height: 25px;
 }
 
 h1 {
@@ -158,8 +160,7 @@ hr {
     padding: 3%;
     margin: 2.5%;
     margin-left: 0%;
-    line-height: 135%;
-    font-size: 1.1rem;
+
 }
 
 .TopLine {
@@ -180,6 +181,15 @@ hr {
 
 }
 
+.FactsAndImg {
+    justify-content: space-between;
+    margin-bottom: 10%;
+}
+
+.services-info-img {
+    width: 48%;
+}
+
 /* IDs */
 
 /* Tags + Tags */
@@ -191,6 +201,10 @@ nav a {
 /* Tags + Classes/IDs */
 .TableBox h3 {
     margin-bottom: 5%;
+}
+
+.FactsAndImg div {
+    width: 48%;
 }
 /* Classes/IDs +  Classes/IDs */
 .TableBox.TableTop {
